# tpl_harp

./: .gitignore  .gitmodules  README.md
ase/: ase_sources.mk
hw/: ccip_std_afu.sv  csr.sv  internal_pkg.sv  template.sv  vlog_files.list
scripts/: setup.env
sw/: CMakeLists.txt
sw/cmake/modules/: getDependencies.cmake
sw/src/: main.cpp
